# Tucan-Eval

./: README.md  pyproject.toml  setup.py
tucan/: __init__.py  inference.py  utils.py
tucan/models/: factory.py  huggingface_model.py
