[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tucan-eval"
dynamic = ["version"]
description = "A Function-Calling Evaluation Framework for Language Models"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Simeon Emanuilov", email = "simeon.emanuilov@gmail.com" },
]
keywords = ["llm", "evaluation", "function-calling", "nlp", "bulgarian", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "tqdm>=4.64.0",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.16.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0"]

[project.urls]
Homepage = "https://github.com/llm-bg/Tucan-Eval"
Repository = "https://github.com/llm-bg/Tucan-Eval"
Issues = "https://github.com/llm-bg/Tucan-Eval/issues"

[project.scripts]
tucan = "tucan.__main__:main"

[tool.setuptools]
packages = ["tucan", "tucan.models"]
include-package-data = true

[tool.setuptools.package-data]
tucan = ["*.yaml", "*.yml"]

[tool.setuptools.dynamic]
version = { attr = "tucan.__version__" }
